--- a/Scroll/scroll/style.css
+++ b/Scroll/scroll/style.css
@@ -1,5 +1,40 @@
-.bg{
-  position: relative;
-  top: 0;
-  left: 0;
+*
+{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    background: #1e1a20;
+
+}
+
+#bg
+{
+    position: fixed; /* This will make the canvas fixed */
+    top: 0;
+    left: 0;
+    outline: none;
+}
+
+
+#section
+{
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    position: relative; /* This will make the section elements relative */
+    font-family: 'Cabin', sans-serif;
+    color: #ffeded;
+    text-transform: uppercase;
+    font-size: 7vmin;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+
+
+section:nth-child(odd)
+{
+    justify-content: flex-end;
 }
