--- a/hdriJS/HDRI/style.css
+++ b/hdriJS/HDRI/style.css
@@ -1,5 +1,16 @@
-.bg{
-  position: relative;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000; /* Add this line */
+}
+
+#bg {
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
